# parallax_scrolling_module

./: CMakeLists.txt
includes/: temp.hpp
src/: parallax_scrolling.cpp
